--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ p {
   color: white; 
   padding: 5px;
   max-width: max-content;
+  transition: width 2s;
+}
+
+p:hover {
+  font-size: 20px;
 }
 
 section {
