--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ p {
   color: white; 
   padding: 5px;
   max-width: max-content;
-  animation: wobble 10s;
+  animation: wobble 1s;
   font-family: "Arial", sans-serif;
 }
 
 @wobble {
-   0%  { -webkit-transform:  rotate(0deg); }
-  20%  { -webkit-transform:  rotate(2deg); }
-  50%  { -webkit-transform:  rotate(-2deg); }
-  100%  { -webkit-transform:  rotate(0deg); }
+   0%  { rotate: 0deg; }
+  20%  { rotate: 2deg; }
+  50%  { rotate: -2deg; }
+  100% { rotate: 0deg; }
 }
 
 section {
